Update README with disclaimer

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-TODO: testing.. this file
+The Indigente Game Engine code base was retrieved from archieve and pushed to gitlab as it is. Since it is almost 20 years old code, one should not expect it to compile out of the box. 
